--- a/rec-db-ui/src/app/app.component.html
+++ b/rec-db-ui/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-tab-group>
-  <mat-tab label="Lesen"> Lesen ! </mat-tab>
-  <mat-tab label="Eintragen"> Eintragen ! </mat-tab>
+  <mat-tab label="Lesen"><app-read-records></app-read-records></mat-tab>
+  <mat-tab label="Eintragen"><app-enter-records></app-enter-records></mat-tab>
 </mat-tab-group>
