--- a/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
@@ -13,12 +13,12 @@
         <mat-icon>add_circle</mat-icon>
     </button>
     <mat-form-field *ngIf="activationQuelleCreationEnabled" class="example-full-width">
-        <input matInput placeholder="Autor">
+        <input matInput placeholder="Autor" [formControl]="quelleAutorFormControl">
     </mat-form-field>
-    <button *ngIf="activationQuelleCreationEnabled" mat-icon-button color="primary">
+    <button *ngIf="activationQuelleCreationEnabled" (click)="addNewQuelle($event)" mat-icon-button color="primary">
         <mat-icon>check_circle</mat-icon>
     </button>
-    <button *ngIf="activationQuelleCreationEnabled" mat-icon-button color="primary">
+    <button *ngIf="activationQuelleCreationEnabled" (click)="abortQuelleCreation($event)" mat-icon-button color="primary">
         <mat-icon>delete</mat-icon>
     </button>
 </form>
