--- a/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
@@ -1,20 +1,19 @@
 <form class="example-form">
     <p>Wähle Quelle</p>
-    <app-input-autocomplete *ngIf="quellenNames !== undefined" [allEntries]="quellenNames" (chosenEntry)="setQuelle($event)"></app-input-autocomplete>
-    <button *ngIf="needNewQuelle && !activationQuelleCreationEnabled" (click)="activateQuelleCreation($event)"
+    <app-input-autocomplete *ngIf="quellenNames !== undefined" [placeholder]="'Name'" [mandatory]="true" [allEntries]="quellenNames" (chosenEntry)="setQuelle($event)"></app-input-autocomplete>
+    <button *ngIf="needNewQuelle && !quelleCreationEnabled" (click)="activateQuelleCreation($event)"
         mat-icon-button color="primary">
         <mat-icon>add_circle</mat-icon>
     </button>
-    <button *ngIf="quelleOk" mat-icon-button color="primary" disabled="quelleOk">
-        <mat-icon>check_circle</mat-icon>
-    </button>
-    <mat-form-field *ngIf="activationQuelleCreationEnabled" class="example-full-width">
-        <input matInput placeholder="Autor" [formControl]="quelleAutorFormControl">
-    </mat-form-field>
-    <button *ngIf="activationQuelleCreationEnabled && !quelleOk" (click)="addNewQuelle($event)" mat-icon-button color="primary">
+
+    <app-input-autocomplete *ngIf="quelleCreationEnabled" [placeholder]="'Autor'" [mandatory]="true" [allEntries]="quellenAutoren" (chosenEntry)="setQuelleCreationAutor($event)"></app-input-autocomplete>
+    <button *ngIf="quelleCreationEnabled" [disabled]="!quelleCreationPossible || quelleChosen" (click)="addNewQuelle($event)" mat-icon-button color="primary">
         <mat-icon>send</mat-icon>
     </button>
-    <button *ngIf="activationQuelleCreationEnabled" (click)="abortQuelleCreation($event)" [disabled]=quelleOk mat-icon-button color="primary">
+    <button *ngIf="!needNewQuelle && !quelleCreationEnabled" [disabled]="quelleNameInput === undefined || quelleNameInput.length === 0" (click)="finalizeSettingQuelle($event)" mat-icon-button color="primary">
+        <mat-icon>check_circle_outline</mat-icon>
+    </button>
+    <button *ngIf="quelleCreationEnabled" [disabled]="quelleChosen" (click)="abortQuelleCreation($event)" mat-icon-button color="primary">
         <mat-icon>delete</mat-icon>
     </button>
 </form>
