components for zutaten and rezepte

--- a/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
@@ -4,7 +4,7 @@
     <p>von: {{quelle.autor}}</p>
     <h3>Was soll Eingetragen werden?</h3>
     <mat-tab-group>
-        <mat-tab label="Rezepte">rezepte</mat-tab>
-        <mat-tab label="Zutaten">zutaten</mat-tab>
+        <mat-tab label="Rezepte"><app-enter-rezepte></app-enter-rezepte></mat-tab>
+        <mat-tab label="Zutaten"><app-enter-zutaten></app-enter-zutaten></mat-tab>
     </mat-tab-group>
 </div>
