--- a/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
@@ -1,10 +1,10 @@
 <div><app-enter-quelle *ngIf="!quelle" (chosenQuelle)="setQuelle($event)"></app-enter-quelle></div>
 <div *ngIf="quelle">
-    <p>Eintragen für Quelle: {{quelle.name}},</p>
-    <p>von: {{quelle.autor}}</p>
-    <h3>Was soll Eingetragen werden?</h3>
+    <h3>Eintragen für Quelle: {{quelle.name}},</h3>
+    <h3>von: {{quelle.autor}}</h3>
+    <h5>Was soll Eingetragen werden?</h5>
     <mat-tab-group>
-        <mat-tab label="Rezepte"><app-enter-rezepte></app-enter-rezepte></mat-tab>
-        <mat-tab label="Zutaten"><app-enter-zutaten></app-enter-zutaten></mat-tab>
+        <mat-tab label="Rezepte"><app-enter-rezepte [quelle]="quelle"></app-enter-rezepte></mat-tab>
+        <mat-tab label="Zutaten"><app-enter-zutaten [quelle]="quelle"></app-enter-zutaten></mat-tab>
     </mat-tab-group>
 </div>
