--- a/rec-db-ui/src/app/enter-records/enter-records/input-autocomplete/input-autocomplete.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/input-autocomplete/input-autocomplete.component.html
@@ -1,4 +1,4 @@
-<form class="example-form">
+<form>
     <mat-form-field (focusout)="focusOut()" class="example-full-width">
         <input type="text" placeholder="{{placeholder}}" aria-label="Number" matInput [formControl]="formControl"
             [matAutocomplete]="auto" />
