--- a/rec-db-ui/src/app/enter-records/enter-records/enter-rezepte/enter-rezepte.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-rezepte/enter-rezepte.component.html
@@ -23,23 +23,30 @@
 <div *ngIf="zutatChosen">
     <h3>Eintragen für Zutat: {{chosenZutat.name}}</h3>
     <h3>in Quelle: {{quelle.name}}</h3>
-    <h5>Bereits zugeordnete Rezepte:</h5>
-    <app-display-rezepte [rezepte]="preSetRezepte"></app-display-rezepte>
-    <h5>Welche Rezepte sollen zugeordnet werden?</h5>
-    <button *ngIf="isRezeptCreationReady()" (click)="activateRezeptCreation($event)" mat-icon-button color="primary">
-        <mat-icon>add_circle</mat-icon>
-    </button>
-    <div *ngIf="isRezeptCreationOngoing()">
-        <app-input-autocomplete [placeholder]="'Rezept'" [mandatory]="true" [allEntries]="allRezepteNames"
-            (chosenEntry)="setRezept($event)"></app-input-autocomplete>
-        <app-input-autocomplete [placeholder]="'Stelle'" [mandatory]="true" [allEntries]=""
-            (chosenEntry)="setRezeptStelle($event)"></app-input-autocomplete> F
-        <h5 *ngIf="doubleRezeptInput" class="error">Rezept bereits eingetragen</h5>
-        <button (click)="addNewRezeptAndSetRelation($event)" mat-icon-button color="primary">
-            <mat-icon>send</mat-icon>
-        </button>
-        <button (click)="endRezeptCreation($event)" mat-icon-button color="primary">
-            <mat-icon>delete</mat-icon>
-        </button>
+    <div class="split">
+        <div id="Bereits zugeordnete" class="half-screen">
+            <h5>Bereits zugeordnete Rezepte:</h5>
+            <app-display-rezepte [rezepte]="preSetRezepte"></app-display-rezepte>
+        </div>
+        <div id="Neue Zuordnung">
+            <h5>Welche Rezepte sollen zugeordnet werden?</h5>
+            <button *ngIf="isRezeptCreationReady()" (click)="activateRezeptCreation($event)" mat-icon-button
+                color="primary">
+                <mat-icon>add_circle</mat-icon>
+            </button>
+            <div *ngIf="isRezeptCreationOngoing()">
+                <app-input-autocomplete [placeholder]="'Rezept'" [mandatory]="true" [allEntries]="allRezepteNames"
+                    (chosenEntry)="setRezept($event)"></app-input-autocomplete>
+                <app-input-autocomplete [placeholder]="'Stelle'" [mandatory]="true" [allEntries]=""
+                    (chosenEntry)="setRezeptStelle($event)"></app-input-autocomplete> F
+                <h5 *ngIf="doubleRezeptInput" class="error">Rezept bereits eingetragen</h5>
+                <button (click)="addNewRezeptAndSetRelation($event)" mat-icon-button color="primary">
+                    <mat-icon>send</mat-icon>
+                </button>
+                <button (click)="endRezeptCreation($event)" mat-icon-button color="primary">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </div>
+        </div>
     </div>
 </div>
