--- a/rec-db-ui/src/app/enter-records/enter-records/input-autocomplete/input-autocomplete.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/input-autocomplete/input-autocomplete.component.html
@@ -1,5 +1,5 @@
 <form>
-    <mat-form-field (focusout)="focusOut()" class="example-full-width">
+    <mat-form-field (focusout)="focusOut()" class="half-screen">
         <input type="text" placeholder="{{placeholder}}" aria-label="Number" matInput [formControl]="formControl"
             [matAutocomplete]="auto" />
         <mat-autocomplete #auto="matAutocomplete">
