--- a/rec-db-ui/src/app/read-records/read-records/read-records/read-records.component.css
+++ b/rec-db-ui/src/app/read-records/read-records/read-records/read-records.component.css
@@ -4,3 +4,16 @@
     width:100%;
     height:100%;
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 15px;
+}
+
+th {
+    text-align: left;
+}
