--- a/rec-db-ui/src/app/read-records/read-records/read-records/read-records.component.html
+++ b/rec-db-ui/src/app/read-records/read-records/read-records/read-records.component.html
@@ -3,11 +3,21 @@
     <sl-dropdown (sl-select)="selection($event)">
         <sl-button slot="trigger" caret>{{selectedZutat ? selectedZutat.name : "Zutat wählen"}}</sl-button>
         <sl-menu>
-            <sl-menu-item *ngFor="let zutat of allZutaten$ | async" value="{{zutat.name}}">{{zutat.name}}</sl-menu-item>
+            <sl-menu-item *ngFor="let zutat of allZutaten$ | async " value="{{zutat.name}}">{{zutat.name}}</sl-menu-item>
         </sl-menu>
     </sl-dropdown>
-    <div *ngFor="let rezepteForQuelle of rezepteForQuelle">
-        <p>Rezepte für Quelle {{rezepteForQuelle.quelleName}}</p>
-        <app-display-rezepte [rezepte]="rezepteForQuelle.rezepte"></app-display-rezepte>
+    <div *ngFor="let rezepteForQuelleEntry of rezepteForQuelle">
+        <h5>Rezepte für Quelle {{rezepteForQuelleEntry.quelleName}}</h5>
+        <table>
+            <tr>
+                <th>Rezeptname</th>
+                <th>Stelle</th>
+            </tr>
+            <tr *ngFor="let rezept of rezepteForQuelleEntry.rezepte">
+                <td>{{rezept.rezeptName}}</td>
+                <td>{{rezept.stelle}}</td>
+            </tr>
+        </table>
+        <!--app-display-rezepte [rezepte]="rezepteForQuelleEntry.rezepte"></app-display-rezepte-->
     </div>
 </div>
