--- a/rec-db-ui/src/app/app.component.html
+++ b/rec-db-ui/src/app/app.component.html
@@ -1,4 +1,6 @@
-<mat-tab-group>
-  <mat-tab label="Lesen"><app-read-records></app-read-records></mat-tab>
-  <mat-tab label="Eintragen"><app-enter-records></app-enter-records></mat-tab>
-</mat-tab-group>
+<sl-tab-group>
+  <sl-tab slot="nav" panel="lesen">Lesen</sl-tab>
+  <sl-tab slot="nav" panel="eintragen">Eintragen</sl-tab>
+  <sl-tab-panel name="lesen"><app-read-records></app-read-records></sl-tab-panel>
+  <sl-tab-panel name="eintragen"><app-enter-records></app-enter-records></sl-tab-panel>
+</sl-tab-group>
