new component for bulk inserting

--- a/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-records/enter-records.component.html
@@ -6,5 +6,6 @@
     <mat-tab-group>
         <mat-tab label="Rezepte"><app-enter-rezepte [quelle]="quelle"></app-enter-rezepte></mat-tab>
         <mat-tab label="Zutaten"><app-enter-zutaten [quelle]="quelle"></app-enter-zutaten></mat-tab>
+        <mat-tab label="Masseneintragugnen"><app-enter-bulk [quelle]="quelle"></app-enter-bulk></mat-tab>
     </mat-tab-group>
 </div>
