--- a/rec-db-ui/src/app/enter-records/enter-records/enter-bulk/enter-bulk.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-bulk/enter-bulk.component.html
@@ -1,3 +1,22 @@
 <h1>Zutaten zu Rezeptstellen</h1>
-<p>Wir haben zunächst viele Rezepte mit ihren Stellen udn wollen Zutaten zuordnen. z.B. Bei Mälzer</p>
-<sl-textarea size="large" resize="auto" (sl-input)="inputRezepte($event)"></sl-textarea>
+<p>Wir haben zunächst viele Rezepte mit ihren Stellen udn wollen Zutaten zuordnen. z.B. Bei Mälzer</p>#
+<p>Bitte zuerst die Rezepte mit ihren Stellen einfügen</p>
+<sl-textarea size="small" (sl-input)="inputRezepte($event)"></sl-textarea>
+<p *ngIf="errorText" class="error">{{errorText}}</p>
+<div *ngIf="rezepte.length > 0">
+    <p>Es wurden {{rezepte.length}} rezepte eingefügt</p>
+    <p>Folgende Stellen befinden sich doppelt in der Liste:</p>
+    <div *ngFor="let ambStelle of ambiguousStellen">
+        <p>Für Stelle {{ambStelle.stelle}}</p>
+        <table>
+            <tr>
+                <th>Rezeptname</th>
+                <th>Operation</th>
+            </tr>
+            <tr *ngFor="let rezept of ambStelle.rezepte">
+                <td>{{rezept.name}}</td>
+                <td><button (click)="deleteRezept(rezept.name)">Löschen</button></td>
+            </tr>
+        </table>
+    </div>
+</div>
