--- a/rec-db-ui/src/app/enter-records/enter-records/enter-quelle/enter-quelle.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-quelle/enter-quelle.component.html
@@ -1,3 +1,4 @@
+<app-enter-bulk></app-enter-bulk>
 <form>
     <p>Wähle Quelle</p>
     <app-input-autocomplete *ngIf="quellenNames !== undefined" [placeholder]="'Name'" [mandatory]="true"
