--- a/rec-db-ui/src/app/shared/display-rezepte/display-rezepte.component.html
+++ b/rec-db-ui/src/app/shared/display-rezepte/display-rezepte.component.html
@@ -1,14 +1,10 @@
-<table mat-table [dataSource]="rezepte">
-    <!-- Name Column -->
-    <ng-container matColumnDef="rezeptName">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.rezeptName}} </td>
-    </ng-container>
-    <!-- Stelle Column -->
-    <ng-container matColumnDef="stelle">
-        <th mat-header-cell *matHeaderCellDef> Stelle </th>
-        <td mat-cell *matCellDef="let element"> {{element.stelle}} </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedRezepteColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedRezepteColumns;"></tr>
+<table>
+    <tr>
+        <th>Rezeptname</th>
+        <th style="text-align: right;">Stelle</th>
+    </tr>
+    <tr *ngFor="let rezept of rezepte">
+        <td>{{rezept.rezeptName}}</td>
+        <td style="text-align: right;">{{rezept.stelle}}</td> 
+    </tr>
 </table>
