read rezepte by quelle

--- a/rec-db-ui/src/app/read-records/read-records/read-records/read-records.component.html
+++ b/rec-db-ui/src/app/read-records/read-records/read-records/read-records.component.html
@@ -1,3 +1,4 @@
-<div class="read-records">
+<div class="read-records, content">
     <app-read-by-zutat></app-read-by-zutat>
+    <app-read-by-quelle></app-read-by-quelle>
 </div>
