--- a/rec-db-ui/src/app/enter-records/enter-records/enter-bulk/enter-bulk.component.html
+++ b/rec-db-ui/src/app/enter-records/enter-records/enter-bulk/enter-bulk.component.html
@@ -4,7 +4,7 @@
 <sl-textarea size="small" (sl-input)="inputRezepte($event)"></sl-textarea>
 <p *ngIf="errorText" class="error">{{errorText}}</p>
 <div *ngIf="rezepte.length > 0">
-    <p>Es wurden {{rezepte.length}} rezepte eingefügt</p>
+    <p>Es wurden {{rezepte.length}} rezepte gefunden</p>
     <p>Folgende Stellen befinden sich mehrfach in der Liste:</p>
     <div *ngFor="let ambStelle of ambiguousStellen">
         <p>Für Stelle {{ambStelle.stelle}}</p>
@@ -13,9 +13,9 @@
                 <th>Rezeptname</th>
                 <th>Operation</th>
             </tr>
-            <tr *ngFor="let rezept of ambStelle.rezepte">
-                <td>{{rezept.rezeptName}}</td>
-                <td><button (click)="deleteRezept(rezept.rezeptName)">Löschen</button></td>
+            <tr *ngFor="let recipePosition of ambStelle.recipePosition">
+                <td>{{recipePosition.name}}</td>
+                <td><button (click)="deleteRezept(recipePosition.name)">Löschen</button></td>
             </tr>
         </table>
     </div>
