Fixed reading Recipes by Resource

--- a/rec-db-ui/src/app/read-records/read-records/read-by-quelle/read-by-quelle.component.html
+++ b/rec-db-ui/src/app/read-records/read-records/read-by-quelle/read-by-quelle.component.html
@@ -5,6 +5,6 @@
         <sl-menu-item *ngFor="let quelle of allQuellen$ | async " value="{{quelle.name}}">{{quelle.name}}</sl-menu-item>
     </sl-menu>
 </sl-dropdown>
-<div style="width: 50%;">
-    <app-display-rezepte *ngIf="rezepteForQuelle" [rezepte]="rezepteForQuelle"></app-display-rezepte>
+<div *ngIf="rezepteForQuelle$" style="width: 50%;">
+    <app-display-rezepte [recipeResourcesObs]="rezepteForQuelle$"></app-display-rezepte>
 </div>
