--- a/rec-db-ui/src/app/read-records/read-records/read-records/read-records.component.html
+++ b/rec-db-ui/src/app/read-records/read-records/read-records/read-records.component.html
@@ -1,4 +1,5 @@
-<div class="read-records, content">
-    <app-read-by-zutat></app-read-by-zutat>
-    <app-read-by-quelle></app-read-by-quelle>
-</div>
+<mat-tab-group>
+    <mat-tab label="Alle für Zutat"><app-read-by-zutat></app-read-by-zutat></mat-tab>
+    <mat-tab label="Alle für Quelle"><app-read-by-quelle></app-read-by-quelle></mat-tab>
+    <mat-tab label="Textsuche"><app-read-by-search></app-read-by-search></mat-tab>
+</mat-tab-group>
